--- a/style.css
+++ b/style.css
@@ -29,7 +29,16 @@
      border-top-left-radius: 20px;
      border-top-right-radius: 20px;
      padding: 10px;
+     cursor: pointer;
 
+ }
+
+ .btn-equal {
+     width: 200px;
+     background-color: #03D64F !important;
+     color: #000 !important;
+     border-radius: 12px;
+     cursor: pointer;
  }
 
  input {
@@ -57,28 +66,10 @@
      margin: 3px;
      margin-top: 10px;
      font-size: larger;
+     cursor: pointer;
  }
 
  button:hover {
      background-color: #03D64F;
      color: #171515;
- }
-
- #btnx {
-     color: #03D64F;
-     background-color: #171515;
- }
-
- #btnx:hover {
-     color: #171515;
-     background-color: #03D64F;
- }
-
- #funcbtn {
-     color: #171515;
-     background-color: #03D64F;
- }
-
- #funcbtn:hover {
-     background-color: #07fc61;
  }
